Updating i3 and adding lf config

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -327,6 +327,7 @@ exec --no-startup-id xfce4-power-manager
 # exec --no-startup-id xautolock -time 10 -locker blurlock
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
+exec --no-startup-id i3-battery-popup -n -L 20 -l 10
 
 # Color palette used for the terminal ( ~/.Xresources file )
 # Colors are gathered based on the documentation:
